--- a/css/voice.css
+++ b/css/voice.css
@@ -1,5 +1,5 @@
 .section-container {
-    padding: 20px 50px;
+    padding: 20px 40px;
     color: #193046;
     margin: 0 auto;
     text-align: center;
